# axion

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.github/workflows/: ci.yml
crates/axion-bridge/: Cargo.toml
crates/axion-bridge/src/: lib.rs
crates/axion-cli/: Cargo.toml
crates/axion-cli/src/: cli.rs  error.rs  main.rs
crates/axion-cli/src/commands/: build.rs  bundle.rs  check.rs  dev.rs  doctor.rs  gui_smoke.rs  mod.rs  release.rs  report.rs  report_util.rs  self_test.rs
crates/axion-core/: Cargo.toml
crates/axion-core/src/: app.rs  builder.rs  config.rs  error.rs  lib.rs  window.rs
crates/axion-manifest/: Cargo.toml
crates/axion-manifest/src/: lib.rs  load.rs  model.rs
crates/axion-packager/: Cargo.toml
crates/axion-packager/src/: lib.rs
crates/axion-protocol/: Cargo.toml
crates/axion-protocol/src/: lib.rs
crates/axion-runtime/: Cargo.toml
crates/axion-runtime/src/: lib.rs
crates/axion-security/: Cargo.toml
crates/axion-security/src/: lib.rs
crates/axion-window-winit/: Cargo.toml
crates/axion-window-winit/src/: lib.rs
docs/: README.md  architecture.md  capabilities.md  ci.md  cli.md  custom-commands.md  diagnostics-report.md  getting-started.md  manifest.md  native-api.md  packaging.md  release-checks.md  security.md  versioning.md
examples/bridge-diagnostics-demo/: Cargo.toml  README.md  axion.toml
examples/bridge-diagnostics-demo/frontend/: app.js  index.html  style.css
examples/bridge-diagnostics-demo/src/: main.rs
examples/file-access-demo/: Cargo.toml  README.md  axion.toml
examples/file-access-demo/frontend/: app.js  index.html  style.css
examples/file-access-demo/icons/: app.icns
examples/file-access-demo/src/: main.rs
examples/hello-axion/: Cargo.toml  README.md  axion.toml
examples/hello-axion/frontend/: app.js  index.html  style.css
examples/hello-axion/src/: main.rs
examples/multi-window/: Cargo.toml  README.md  axion.toml
examples/multi-window/frontend/: app.js  index.html
examples/multi-window/src/: main.rs
servo/components/constellation/: constellation.rs
servo/components/fonts/: font.rs
servo/components/layout/flow/inline/: construct.rs  line.rs  mod.rs  text_run.rs
servo/components/malloc_size_of/: lib.rs
servo/components/net/fetch/: methods.rs
servo/components/net/tests/: fetch.rs
servo/components/script/: links.rs  script_module.rs  script_thread.rs  webdriver_handlers.rs
servo/components/script/dom/: window.rs
servo/components/script/dom/canvas/2d/: canvas_state.rs
servo/components/script/dom/document/: document.rs  document_embedder_controls.rs  document_event_handler.rs  documentorshadowroot.rs
servo/components/script/dom/element/: element.rs  focus.rs
servo/components/script/dom/html/: htmlbuttonelement.rs  htmlelement.rs  htmlformelement.rs  htmliframeelement.rs  htmloptionelement.rs  interactive_element_command.rs
servo/components/script/dom/html/input_element/: mod.rs
servo/components/script/dom/servoparser/: mod.rs
servo/components/servo/tests/: webview.rs
servo/components/shared/layout/: lib.rs
servo/components/shared/net/: lib.rs
servo/components/storage/indexeddb/: mod.rs
servo/components/storage/indexeddb/engines/: sqlite.rs
servo/ports/servoshell/desktop/: gui.rs  headed_window.rs
